--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 DB_USERNAME=postgres
-DB_PASSWORD=
+DB_PASSWORD=Albert1993!
 DB_NAME_TEST=nest-test
 DB_NAME_DEVELOPMENT=nest-dev
 DB_NAME_PRODUCTION=nest-prod
@@ -20,5 +20,5 @@ API_URL=http://localhost:4000
 CLIENT_URL=http://localhost:3000
 MAIL_HOST="smtp.gmail.com"
 MAIL_PORT=465
-MAIL_USER=""
-MAIL_PASSWORD=""
+MAIL_USER="albert.aghajanyan.mw@gmail.com"
+MAIL_PASSWORD="vonypektxbsfdkbp"
