--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "openapi-typescript-fetch": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.1",
     "react-i18next": "^13.2.2",
     "react-redux": "^8.1.2",
