--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
-    "@nestjs/platform-express": "^10.2.5",
+    "@nestjs/platform-express": "^10.2.7",
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.11",
     "@types/bcrypt": "^5.0.0",
@@ -54,6 +54,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.8",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.9",
     "@types/sequelize": "^4.28.16",
